--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         
         <div class="col-left">
             <h2>Follow us on</h2>
-            <img src="contact.svg" style="width:100%;height:100%;" alt="contacts">
+            <img src="./assets/contact.svg" style="width:100%;height:100%;" alt="contacts">
         </div>
             <p style="text-align: end;">
                 <h2>Recommendations</h2>
