--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
         <a href="#contact" target="right" >Contact</a>
         <a href="./register/register.html" target="right">Register</a>
         <a href="./ViewCustomer/viewCustomer.html" target="right">View</a>
+        <a href="./ViewCustomer" onClick="error()" target="right">View</a>
         <a style="float: right;" href="#">
         <form><input type="search" placeholder="search">
             <input type="submit" value="search"></form></a>
