passing custom params to swa

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             console.everything.push({ "datetime": Date().toLocaleString(), "value": msg, "url": url, "error": error });
             console.log(console.everything);
         }
-      	swa.custom1={ref: console.everything[0][error]};
+      	swa.custom1={ref: console.everything[0].error};
 
 </script>
 </body>
