--- a/index.html
+++ b/index.html
@@ -154,10 +154,13 @@
         window.onerror = function(msg, url, lineNo, columnNo, error) {
             console.everything.push({ "datetime": Date().toLocaleString(), "value": msg, "url": url, "error": error });
             console.log(console.everything);
-        }
-       var stringV = "1234";
-      	swa.custom1={ref: 'console.everything[0].error'},
-       swa.custom2={ref: 'stringV'};
+        };
+       swa.custom1={ref: console.everything},
+       swa.custom2={ref: 'stringV';
+                    
+        function stringV() {
+                    return console.everything[0].error;
+                   }
 
 </script>
 </body>
