--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             console.log(console.everything);
         };
        swa.custom1={ref: console.everything},
-       swa.custom2={ref: 'stringV';
+       swa.custom2={ref: 'stringV'};
                     
         function stringV() {
                     return console.everything[0].error;
