--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
        swa.custom2={ref: 'stringV'};
                     
         function stringV() {
-                    return console.everything[0].error;
+                    return 'vilas;
                    }
 
 </script>
