--- a/index.html
+++ b/index.html
@@ -155,12 +155,14 @@
             console.everything.push({ "datetime": Date().toLocaleString(), "value": msg, "url": url, "error": error });
             console.log(console.everything);
         };
-       swa.custom1={ref: 'console.everything[0].error'},
+       var temp = console.everything[0].error;
+       console.log('temp', temp);
+       swa.custom1={ref: temp},
        swa.custom2={ref: 'stringV'};
                     
-//         function stringV() {
-//                     return 'vilas';
-//                    }
+        function stringV() {
+                    return temp;
+                   }
 
 </script>
 </body>
