--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 body: raw,
                 redirect: 'follow'
               };
-              fetch("https://zeclwoqmv8.execute-api.us-east-1.amazonaws.com/dev", requestOptions)
+              fetch("https://zeclwoqmv8.execute-api.us-east-1.amazonaws.com/", requestOptions)
                 .then(response => response.text())
                 .then(result => alert(JSON.parse(result).body))
                 .catch(error => console.log('error', error));
