--- a/ViewCustomer/viewCustomer.html
+++ b/ViewCustomer/viewCustomer.html
@@ -35,6 +35,8 @@
                 })
                   .catch(error => console.log('error', error));
                 }
+              
+              this.getErrors();
           </script>
     </head>
     <body>
