--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             </div>
             <div class="card">
                 <h2>Types of car insurance we offer</h2>
-                <img src="./assets/Register.svg" style="width:100%;height:200px;">
+                <a href="#" onClick="fun()"><img src="./assets/Register.svg" style="width:100%;height:200px;"></a>
                     <h3>Third-Party liability<h3>
                     <p style=" text-align: justify ; font-size: 15px;">
                         This plan protects against the claims made by the third party like the driver of the other vehicle, passengers or owner of the other vehicle, pedestrians, etc. 
