--- a/index.html
+++ b/index.html
@@ -139,8 +139,19 @@
 </footer>
       <a class="bottom" href="#top">Go to top</a>
    <script>
+//     var swa = {
+//         pubToken: '3ae49c63-82b0-48e1-8dbc-371b51c7f498',
+//         baseUrl: 'https://events-tracker.cfapps.sap.hana.ondemand.com/tracker/',
+//         owner: null, 
+//         //set this to a function that returns the identifier of the tracked user
+//     };
+//     (function(){
+//         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+//         g.type='text/javascript'; g.defer=true; g.async=true; g.src=swa.baseUrl+'js/track.js';
+//         s.parentNode.insertBefore(g,s);
+//      })();
     var swa = {
-        pubToken: '3ae49c63-82b0-48e1-8dbc-371b51c7f498',
+        pubToken: '7a82c8c7-6fa3-4a7c-a4e7-b96ffbf7b6d0',
         baseUrl: 'https://events-tracker.cfapps.sap.hana.ondemand.com/tracker/',
         owner: null, 
         //set this to a function that returns the identifier of the tracked user
