--- a/index.html
+++ b/index.html
@@ -45,14 +45,12 @@
 </head>
 <body >
     <nav id="top">
-        <a href="index.html" target="right" >Home</a>
+        <a href="index.html" target="right">Home</a>
         <a href="#contact" target="right" >Contact</a>
         <a href="./register/register.html" target="right">Register</a>
         <a href="./ViewCustomer/viewCustomer.html" target="right">View</a>
-        <a href="#" onClick="error()" target="right">View</a>
-        <a style="float: right;" href="#">
-        <form><input type="search" placeholder="search">
-            <input type="submit" value="search"></form></a>
+        <a href="#" onClick="getView()" target="right">View</a>
+        <a >
     </nav>
 <header> 
     <h1>Progressive Insurance Claim System</h1><br>
@@ -152,7 +150,7 @@
 //      })();
     var swa = {
         pubToken: '7a82c8c7-6fa3-4a7c-a4e7-b96ffbf7b6d0',
-        baseUrl: 'https://events-tracker.cfapps.sap.hana.ondemand.com/tracker/',
+        baseUrl: 'https://events-integration-vilas.cfapps.sap.hana.ondemand.com/tracker/js/',
         owner: null, 
         //set this to a function that returns the identifier of the tracked user
     };
@@ -162,9 +160,15 @@
         s.parentNode.insertBefore(g,s);
      })();
         window.onerror = function(msg, url, lineNo, columnNo, error) {
-            swa.custom1={ref: msg};
-            swa.custom2={ref: url};
-            swa.custom3={ref: lineNo+':'+columnNo};
+            if (swa.custom1 && url + lineNo+':'+columnNo == swa.custom2.ref && msg == swa.custom1.ref) {
+                console.log("Didn't UPDATE SWA", swa.custom3);
+                return;
+            } else {
+                swa.custom1={ref: msg};
+                swa.custom2={ref: url + lineNo + ':' + columnNo};
+                swa.custom3={ref: "JavaScript Errors"};
+                console.log("UPDATED SWA", swa.custom2.ref);
+            }
         };
 </script>
 </body>
