--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 //      })();
     var swa = {
         pubToken: '7a82c8c7-6fa3-4a7c-a4e7-b96ffbf7b6d0',
-        baseUrl: 'https://events-integration-vilas.cfapps.sap.hana.ondemand.com/tracker/js/',
+        baseUrl: 'https://events-integration-vilas.cfapps.sap.hana.ondemand.com/tracker/',
         owner: null, 
         //set this to a function that returns the identifier of the tracked user
     };
