--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 //      })();
     var swa = {
         pubToken: '7a82c8c7-6fa3-4a7c-a4e7-b96ffbf7b6d0',
-        baseUrl: 'https://events-integration-vilas.cfapps.sap.hana.ondemand.com/tracker/',
+        baseUrl: 'https://events-tracker.cfapps.sap.hana.ondemand.com/tracker/',
         owner: null, 
         //set this to a function that returns the identifier of the tracked user
     };
@@ -159,15 +159,24 @@
         g.type='text/javascript'; g.defer=true; g.async=true; g.src=swa.baseUrl+'js/track.js';
         s.parentNode.insertBefore(g,s);
      })();
-        window.onerror = function(msg, url, lineNo, columnNo, error) {
-            if (swa.custom1 && url + lineNo+':'+columnNo == swa.custom2.ref && msg == swa.custom1.ref) {
-                console.log("Didn't UPDATE SWA", swa.custom3);
+        // window.onerror = function(msg, url, lineNo, columnNo, error) {
+        //     if (swa.custom1 && url + lineNo+':'+columnNo == swa.custom2.ref && msg == swa.custom1.ref) {
+        //         console.log("Didn't UPDATE SWA", swa.custom3);
+        //         return;
+        //     } else {
+        //         swa.custom1={ref: msg};
+        //         swa.custom2={ref: url + lineNo + ':' + columnNo};
+        //         swa.custom3={ref: "JavaScript Errors"};
+        //         console.log("UPDATED SWA", swa.custom2.ref);
+        //     }
+        // };
+        window.onerror = function(message, url, lineNo, columnNo, error) {
+            if (swa.e_n && url + lineNo + ':' + columnNo == swa.e_a.ref && message == swa.e_n.ref) {
                 return;
             } else {
-                swa.custom1={ref: msg};
-                swa.custom2={ref: url + lineNo + ':' + columnNo};
-                swa.custom3={ref: "JavaScript Errors"};
-                console.log("UPDATED SWA", swa.custom2.ref);
+                swa.e_n = {ref: message};
+                swa.e_a = {ref: url + lineNo + ':' + columnNo };
+                swa.e_c = {ref: "JavaScript Errors"};
             }
         };
 </script>
