--- a/index.html
+++ b/index.html
@@ -159,26 +159,26 @@
         g.type='text/javascript'; g.defer=true; g.async=true; g.src=swa.baseUrl+'js/track.js';
         s.parentNode.insertBefore(g,s);
      })();
-        // window.onerror = function(msg, url, lineNo, columnNo, error) {
-        //     if (swa.custom1 && url + lineNo+':'+columnNo == swa.custom2.ref && msg == swa.custom1.ref) {
-        //         console.log("Didn't UPDATE SWA", swa.custom3);
-        //         return;
-        //     } else {
-        //         swa.custom1={ref: msg};
-        //         swa.custom2={ref: url + lineNo + ':' + columnNo};
-        //         swa.custom3={ref: "JavaScript Errors"};
-        //         console.log("UPDATED SWA", swa.custom2.ref);
-        //     }
-        // };
-        window.onerror = function(message, url, lineNo, columnNo, error) {
-            if (swa.e_n && url + lineNo + ':' + columnNo == swa.e_a.ref && message == swa.e_n.ref) {
+        window.onerror = function(msg, url, lineNo, columnNo, error) {
+            if (swa.custom1 && url + lineNo+':'+columnNo == swa.custom2.ref && msg == swa.custom1.ref) {
+                console.log("Didn't UPDATE SWA", swa.custom3);
                 return;
             } else {
-                swa.e_n = {ref: message};
-                swa.e_a = {ref: url + lineNo + ':' + columnNo };
-                swa.e_c = {ref: "JavaScript Errors"};
+                swa.custom1={ref: msg};
+                swa.custom2={ref: url + lineNo + ':' + columnNo};
+                swa.custom3={ref: "JavaScript Errors"};
+                console.log("UPDATED SWA", swa.custom2.ref);
             }
         };
+        // window.onerror = function(message, url, lineNo, columnNo, error) {
+        //     if (swa.e_n && url + lineNo + ':' + columnNo == swa.e_a.ref && message == swa.e_n.ref) {
+        //         return;
+        //     } else {
+        //         swa.e_n = {ref: message};
+        //         swa.e_a = {ref: url + lineNo + ':' + columnNo };
+        //         swa.e_c = {ref: "JavaScript Errors"};
+        //     }
+        // };
 </script>
 </body>
 </html>
