--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
         s.parentNode.insertBefore(g,s);
      })();
     //  errorObj = {};
-    // window.onerror = function(msg, url, lineNo, columnNo, error) {
+    window.onerror = function(msg, url, lineNo, columnNo, error) {
     //     errorObj = {
     //         'msg': msg,
     //         'url': url,
@@ -170,7 +170,10 @@
     //     swa.custom2 = {ref: url + lineNo + ':' + columnNo};
     //     swa.custom3 = {ref: "JavaScript Errors"};
     //     console.log("UPDATED SWA", swa.custom2.ref, errorObj);
-    // };
+        
+        swa.event_type = {ref: "error"};
+        
+    };
 
     // window.onload = function() {
     //     console.log("ErrorObj on Load", errorObj, swa.custom1);
