--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     //     swa.custom3 = {ref: "JavaScript Errors"};
     //     console.log("UPDATED SWA", swa.custom2.ref, errorObj);
         
-        swa.event_type = {ref: "error"};
+        swa.event_type = "error";
         
     };
 
