--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
        
     var swa = {
         pubToken: 'f5db033c-0db7-42d6-b55a-f548ad1d343f',
-        baseUrl: 'https://events-innovision.cfapps.sap.hana.ondemand.com/tracker/',
+        baseUrl: 'https://events-tracker-innovision.cfapps.sap.hana.ondemand.com/tracker/',
         owner: null 
         //set this to a function that returns the identifier of the tracked user
     };
