--- a/register/register.html
+++ b/register/register.html
@@ -41,7 +41,8 @@
 </head>
 
 <body>
-    <p onclick="window.location.href='../index.html'"><img src="../assets/left-arrow.svg" style="width:4%; height:4%;"></p>
+    <p onclick="window.location.href='../index.html'" style="cursor: pointer; position: relative;">
+        <span style="width:50px;height:50px; font-size: 50px;"> &#8249;</span></p>
     <div class="container">
         <header class="header">
             <h1 id="title" class="text-center">New Policy Registration</h1>
