--- a/calculator/CarInsuranceCalculator.html
+++ b/calculator/CarInsuranceCalculator.html
@@ -8,7 +8,8 @@
   <script src="CarInsuranceCalc.js"></script>
 </head>
 <body>
-  <p onclick="window.location.href='../index.html'"><img src="../assets/left-arrow.svg" style="width:4%; height:4%;"></p>
+  <p onclick="window.location.href='../index.html'" style="cursor: pointer; position: relative;">
+    <span style="width:50px;height:50px; font-size: 50px;"> &#8249;</span></p>
   <div class="container">
     <header>Car Damage Amount Calculator</header>
     <ul>    
