--- a/ViewCustomer/viewCustomer.html
+++ b/ViewCustomer/viewCustomer.html
@@ -43,13 +43,13 @@
       <p onclick="window.location.href='../index.html'" style="cursor: pointer; position: relative;">
         <span style="width:50px;height:50px; font-size: 50px;"> &#8249;</span></p> 
       <div class="container">
-        <h1 style="margin: 20px;">Check the customer details</h1>
-        <span >Enter Your Mobile Number: </span>
-        <span >
-          <input type="text" id="mobileNumber" class="form-control" placeholder="Mobile Number" required/>
-          <button type="submit" class ="submit-button" onclick="callAPI(document.getElementById('mobileNumber').value)">search</button>
-        </span>
-        <div id="data" style="background: #0000008e; padding: 8px; margin: 20px; border-radius: 8px;"></div>
+          <h1 style="margin: 20px;">Check the customer details</h1>
+          <span >Enter Your Mobile Number: </span>
+          <span >
+            <input type="text" id="mobileNumber" class="form-control" placeholder="Mobile Number" required/>
+            <button type="submit" class ="submit-button" onclick="callAPI(document.getElementById('mobileNumber').value)">search</button>
+          </span>
+        <div id="data" style="background: #0000008e; padding: 8px; margin: 20px; border-radius: 8px; border: 0.1px solid rgba(245, 245, 245, 0.233);"></div>
 
-        </div>
+      </div>
     </body>
