--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                 <h2>Registered Cases Status</h2>
                   <img src="./assets/car.jpg" alt="car" style="width:100%;height:400px;">
                         <div class="cases">             
-                            <label for="active-cases">Active:</label><progress id="web-dev" value="50" max="100">50%</progress><br>
+                            <label for="active-cases">Active:</label><progress id="web-dev" value="50" max="100">50%</progress>
                             <label for="pending-cases">Pending:</label><progress id="web-des" value="30" max="100">30%</progress>
                             <label for="New-cases">New:</label><progress id="web-des" value="20" max="100">20%</progress>
                         </div>
