--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <a href="./register/register.html">Register</a>
         <a href="./ViewCustomer/viewCustomer.html">View</a>
         <a href="#" onClick="getView()">View</a>
-        <a href="#" onClick="createErrorClick()">Warning</a>
+        <a href="#" onClick="getErrorClick()">Warning</a>
     </nav>
 <header> 
     <h1>Progressive Insurance Claim System</h1>
