--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <div class="col-left">
             <div class="card">     
               <h1>Calculate amount</h1>
-              <a href="./calculator/CarInsuranceCalculator.html"><img src="./assets/calculator.svg" style="width:100%;height:200px;"></a>
+<!--               <a href="./calculator/CarInsuranceCalculator.html" ><img src="./assets/calculator.svg" style="width:100%;height:200px;"></a> -->
+                    <img src="./assets/calculator.svg" style="width:100%;height:200px;" onClick="openCalculator()">
               <p><legend>
 
                   <legend></p>
@@ -54,7 +55,7 @@
             </div>
             <div class="card">
                 <h1>Types of car insurance we offer</h1>
-                <a href="#" onClick="fun()"><img src="./assets/Register.svg" style="width:100%;height:200px;"></a>
+                <img src="./assets/Register.svg" style="width:100%;height:200px;">
                     <h2>Third-Party liability<h2>
                     <p style=" text-align: justify;">
                         This plan protects against the claims made by the third party like the driver of the other vehicle, passengers or owner of the other vehicle, pedestrians, etc. 
