--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             <div class="card">     
               <h1>Calculate amount</h1>
 <!--               <a href="./calculator/CarInsuranceCalculator.html" ><img src="./assets/calculator.svg" style="width:100%;height:200px;"></a> -->
-                    <img src="./assets/calculator.svg" style="width:100%;height:200px;" onClick="openCalculator()">
+                    <a href="#" onClick="openCalculator()"><img src="./assets/calculator.svg" style="width:100%;height:200px;" ></a>
               <p><legend>
 
                   <legend></p>
