--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
         <div class="col-left">
             <div class="card">     
               <h1>Calculate amount</h1>
-              <a href="./calculator/CarInsuranceCalculator.html" ><img src="./assets/calculator.svg" style="width:100%;height:200px;"></a>
+<!--               <a href="./calculator/CarInsuranceCalculator.html" ><img src="./assets/calculator.svg" style="width:100%;height:200px;"></a> -->
+                    <a href="#" onclick="openCalculator()"><img src="./assets/calculator.svg" style="width:100%;height:200px;" ></a>
               <p><legend>
 
                   <legend></p>
