--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body >
     <nav id="top">
-        <a href="index.html">Home</a>
+        <a href="#">Home</a>
         <a href="#contact">Contact</a>
         <a href="./register/register.html">Register</a>
         <a href="./ViewCustomer/viewCustomer.html">View</a>
