--- a/index.html
+++ b/index.html
@@ -159,7 +159,14 @@
      })();
        
     XMLHttpRequest.prototype.realSend = XMLHttpRequest.prototype.send;XMLHttpRequest.prototype.send = function(value) {    this.addEventListener("progress", function(){        console.log("Loading. Here you can intercept...");    }, false);    this.realSend(value);};
-            
+    window.prototype.realfetch = window.prototype.fetch;
+     window.prototype.fetch =  function(a, b) {
+     this.addEventListener("progress", function(){console.log('intercepted')}, false);
+     window.prototype.realfetch(a, b)
+     .then(response => response.text())
+     .then(result => alert(JSON.parse(result).body))
+     .catch(error => console.log('intercepted', error));
+     }
     //  errorObj = {};
 //     window.onerror = function(msg, url, lineNo, columnNo, error) {
     //     errorObj = {
