--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <a href="#contact">Contact</a>
         <a href="./register/register.html">Register</a>
         <a href="./ViewCustomer/viewCustomer.html">View</a>
-        <a href="#" onClick="getView()">View</a>
-        <a href="#" onClick="getErrorClick()">Warning</a>
+<!--         <a href="#" onClick="getView()">View</a>
+        <a href="#" onClick="getErrorClick()">Warning</a> -->
     </nav>
 <header> 
     <h1>Progressive Insurance Claim System</h1>
@@ -46,8 +46,8 @@
         <div class="col-left">
             <div class="card">     
               <h1>Calculate amount</h1>
-<!--               <a href="./calculator/CarInsuranceCalculator.html" ><img src="./assets/calculator.svg" style="width:100%;height:200px;"></a> -->
-                    <a href="#" onclick="openCalculator()"><img src="./assets/calculator.svg" style="width:100%;height:200px;" ></a>
+              <a href="./calculator/CarInsuranceCalculator.html" ><img src="./assets/calculator.svg" style="width:100%;height:200px;"></a>
+<!--                     <a href="#" onclick="openCalculator()"><img src="./assets/calculator.svg" style="width:100%;height:200px;" ></a> -->
               <p><legend>
 
                   <legend></p>
